# The-AI-Engineer-Challenge-next-pythonfn

./: .gitignore  .vercelignore  changed_since_zip.txt  pyproject.toml  vercel.json
api/: chat.py  index.py  requirements.txt
frontend/: .vercelignore  README.md  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/components/: ChatInterface.tsx
